# clawsec-rs

./: CLAUDE.md  Cargo.toml  README.md
clawsec-core/: Cargo.toml
clawsec-core/src/: ca.rs  config.rs  lib.rs  pid.rs  ssh_watcher.rs
clawsec-core/src/proxy/: http.rs
clawsec-core/src/scanner/: mod.rs  scan.rs
clawsec-core/src/threat/: log.rs  mod.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: highlight.ts  theme.svelte.ts
frontend/src/lib/components/: Config.svelte  Dashboard.svelte  LiveMonitor.svelte  Sidebar.svelte  ThemeToggle.svelte  Threats.svelte
src/: main.rs  pid.rs  ssh_watcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/proxy/: http.rs
src/scanner/: patterns.rs
src/threat/: log.rs
