[package]
name = "clawsec"
version = "3.0.0"
edition = "2021"
description = "ClawSec Monitor — AI Agent Traffic Inspector (CLI)"

[dependencies]
clawsec-core = { path = "clawsec-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"

[workspace]
members = ["clawsec-core", "src-tauri"]
