[package]
name = "clawsec-core"
version = "3.0.0"
edition = "2021"
description = "ClawSec Monitor core library — AI Agent Traffic Inspector"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-native-certs = "0.7"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
tempfile = "3"
libc = "0.2"
time = { version = "0.3", features = ["std"] }
