[package]
name = "clawsec-tauri"
version = "3.0.0"
edition = "2021"
description = "ClawSec Monitor Desktop UI"

[lib]
name = "clawsec_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
clawsec-core = { path = "../clawsec-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
